# arena-models

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  procthor_database.json
.github/workflows/: ci.yaml
arena_models/: README.md  config_id_file.txt  config_result_file.txt  package.xml  setup.cfg  setup.py
arena_models/arena_models/: build_db.py  down_db.py  get_db.py  merge_db.py  query_db.py
arena_models/text_processing/: language_processing.py  processor.py
scripts/: build.sh
src/: .gitignore  pyproject.toml
src/arena_models/: __init__.py  __main__.py  build_db.py  down_db.py  get_db.py  merge_db.py
src/arena_models/cli/: __init__.py  build.py  down.py  get.py  merge.py  query.py  utils.py
src/arena_models/cli/db/: __init__.py  build.py  listall.py  query.py
src/arena_models/cli/net/: __init__.py  author.py  exists.py  fetch.py  list.py
src/arena_models/cli/semantic/: __init__.py  lint.py
src/arena_models/impl/: __init__.py  author.py  build.py  down.py  fetch.py  get.py  listall.py  merge.py  query.py
src/arena_models/semantic/: ASA.md  __init__.py  asa.yaml  fixes.py  lint.py  taxonomy.py
src/arena_models/utils/: CoordinateSystem.py  Database.py  ModelConverter.py  enums.py  geom.py  io_utils.py  logging.py
src/arena_models/utils/ModelConverter/: __init__.py  __main__.py  converter.py
src/arena_models/utils/ModelConverter/UsdBaker/: DockerUsdBaker.py  LocalUsdBaker.py  __init__.py  converter.py
tests/: conftest.py  test_annotation.py  test_author.py  test_bucket.py  test_cli.py  test_coordinate_system.py  test_database.py  test_fetch.py  test_geom.py  test_human_annotation.py  test_object_annotation.py  test_query.py  test_semantic_fixes.py  test_semantic_lint.py  test_semantic_taxonomy.py  test_utils.py
