<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arena_models</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="giang.nht108201@gmail.com">kuro</maintainer>
  <maintainer email="dev@voshch.dev">Vova Shcherbyna</maintainer>
  <license>Apache-2.0</license>

  <build_depend>ament_cmake_venv</build_depend>
  <build_depend>ament_cmake_venv_pyenv</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
