[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arena_models"
version = "0.1.0"
description = "TODO"
authors = [
    { name = "kuro", email = "giang.nht108201@gmail.com" },
    { name = "Vova Shcherbyna", email = "dev@voshch.dev" },
]
dependencies = [
    "chromadb~=1.0.21",
    "numpy~=1.26.4",
    "scipy~=1.15.3",
    "pyyaml~=6.0.2",
    "mathutils~=3.3.0",
    "attrs~=25.3.0",
    "cattrs~=25.2.0",
    "typer~=0.19.1",
    "enlighten~=1.14.1",
]
# requires-python = "==3.11.*" # only required for arena_models[build]


[project.optional-dependencies]
build = [
    "bpy~=4.5.3",
]
test = [
    "pytest~=8.0",
]

[project.urls]
Homepage = "https://github.com/arena-models/arena-models"
Repository = "https://github.com/arena-models/arena-models"


[tool.setuptools.packages.find]
where = ["."]
include = ["arena_models*"]

[tool.setuptools.package-data]
arena_models = ["semantic/asa.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 320
src = ["arena_models"]
extend-exclude = [
    "build",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ANN", "PYI"]
ignore = ["E501", "E402", "F841", "E731", "PYI051", "E741", "UP035"]

[tool.ruff.lint.per-file-ignores]
"arena_models/cli/**/*.py" = ["B008"]
"arena_models/__main__.py" = ["B008"]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true
mypy-init-return = true
allow-star-arg-any = true

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

